--- a/core/templates/orders/checkout.html
+++ b/core/templates/orders/checkout.html
@@ -200,7 +200,7 @@
   <div id="stockFailModal" class="modal">
     <div class="modal-box">
       <div class="modal-head">
-        <div>بعض المنتجات نفدت. تم تحديث سلتك.</div>
+        <div>بعض المنتجات تغير مخزونها. تم تحديث سلتك.</div>
         <button type="button" class="icon-btn" id="sfClose">✕</button>
       </div>
       <div class="modal-body">
