--- a/core/templates/dashboard/super_owner/settings.html
+++ b/core/templates/dashboard/super_owner/settings.html
@@ -177,6 +177,59 @@
                             </div>
                         </div>
                         
+                        <div class="row mt-4">
+                            <div class="col-md-6">
+                                <h5 class="mb-3">
+                                    <i class="fas fa-toggle-on me-2"></i>
+                                    أعلام الميزات
+                                </h5>
+                                <div class="form-check form-switch mb-2">
+                                    <input class="form-check-input" type="checkbox" id="feat_new_arrivals" name="feat_new_arrivals" {% if features.NEW_ARRIVALS_SECTION %}checked{% endif %}>
+                                    <label class="form-check-label" for="feat_new_arrivals">إظهار قسم "وصل حديثًا" في الواجهة</label>
+                                </div>
+                                <div class="form-check form-switch mb-2">
+                                    <input class="form-check-input" type="checkbox" id="feat_reports" name="feat_reports" {% if features.OWNER_DASHBOARD_REPORTS %}checked{% endif %}>
+                                    <label class="form-check-label" for="feat_reports">تفعيل صفحة "التقارير" في لوحة المالك</label>
+                                </div>
+                                <hr>
+                                <h6 class="mb-2">التحكم بالفئات الظاهرة في الصفحة</h6>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-check form-switch mb-2">
+                                            <input class="form-check-input" type="checkbox" id="feat_cat_women" name="feat_cat_women" {% if features.CATEGORY_WOMEN %}checked{% endif %}>
+                                            <label class="form-check-label" for="feat_cat_women">ملابس نسائية</label>
+                                        </div>
+                                        <div class="form-check form-switch mb-2">
+                                            <input class="form-check-input" type="checkbox" id="feat_cat_men" name="feat_cat_men" {% if features.CATEGORY_MEN %}checked{% endif %}>
+                                            <label class="form-check-label" for="feat_cat_men">ملابس رجالية</label>
+                                        </div>
+                                        <div class="form-check form-switch mb-2">
+                                            <input class="form-check-input" type="checkbox" id="feat_cat_kids" name="feat_cat_kids" {% if features.CATEGORY_KIDS %}checked{% endif %}>
+                                            <label class="form-check-label" for="feat_cat_kids">ملابس أطفال</label>
+                                        </div>
+                                        <div class="form-check form-switch mb-2">
+                                            <input class="form-check-input" type="checkbox" id="feat_cat_cosmetics" name="feat_cat_cosmetics" {% if features.CATEGORY_COSMETICS %}checked{% endif %}>
+                                            <label class="form-check-label" for="feat_cat_cosmetics">كوزمتك</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-check form-switch mb-2">
+                                            <input class="form-check-input" type="checkbox" id="feat_cat_perfumes" name="feat_cat_perfumes" {% if features.CATEGORY_PERFUMES %}checked{% endif %}>
+                                            <label class="form-check-label" for="feat_cat_perfumes">عطور</label>
+                                        </div>
+                                        <div class="form-check form-switch mb-2">
+                                            <input class="form-check-input" type="checkbox" id="feat_cat_shoes" name="feat_cat_shoes" {% if features.CATEGORY_SHOES %}checked{% endif %}>
+                                            <label class="form-check-label" for="feat_cat_shoes">أحذية</label>
+                                        </div>
+                                        <div class="form-check form-switch mb-2">
+                                            <input class="form-check-input" type="checkbox" id="feat_cat_watches" name="feat_cat_watches" {% if features.CATEGORY_WATCHES %}checked{% endif %}>
+                                            <label class="form-check-label" for="feat_cat_watches">ساعات</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="row">
                             <div class="col-12">
                                 <hr>
